--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ nav a:hover{
 }
 
 .paragraph:hover{
-  background-color: yellow;
+  background-color: red;
   font-size: 24px;
+  color: white;
 }
 
 .container{
